--- a/app/src/main/res/layout/list_item_team_member.xml
+++ b/app/src/main/res/layout/list_item_team_member.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,35 +8,30 @@
 
     <ImageView
         android:id="@+id/teamMemberAvatar"
-        android:layout_width="@dimen/list_item_height"
-        android:layout_height="@dimen/list_item_height"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        tools:srcCompat="@tools:sample/avatars"
-        android:contentDescription="@string/contentDescription_teamMemberAvatar"/>
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/teamMemberLogin"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_toEndOf="@id/teamMemberAvatar"
-        android:paddingStart="@dimen/padding_standard"
-        android:paddingEnd="@dimen/padding_standard"
-        android:textSize="@dimen/login_text_size"
-        tools:text="login" />
+        android:layout_marginStart="@dimen/padding_standard"
+        tools:text="login"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/teamMemberType"
+        app:layout_constraintStart_toEndOf="@+id/teamMemberAvatar"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/teamMemberType"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@id/teamMemberLogin"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="@dimen/padding_standard"
-        android:layout_marginEnd="@dimen/padding_standard"
-        android:layout_toEndOf="@id/teamMemberLogin"
-        android:text="TextView"
-        android:gravity="end"
-        android:textSize="@dimen/type_text_size" />
-
-</RelativeLayout>
+        tools:text="type"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+</androidx.constraintlayout.widget.ConstraintLayout>
