--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,13 +9,14 @@
   </style>
 
   <style name="member_info" parent="AppTheme">
-    <item name="android:layout_width">wrap_content</item>
+    <item name="android:layout_width">100dp</item>
     <item name="android:layout_height">wrap_content</item>
     <item name="android:textSize">@dimen/detail_text_size</item>
     <item name="android:paddingTop">@dimen/padding_half</item>
     <item name="android:paddingBottom">@dimen/padding_half</item>
-    <item name="paddingStart">@dimen/padding_half</item>
-    <item name="paddingEnd">@dimen/padding_standard</item>
+    <item name="paddingStart">@dimen/padding_double</item>
+    <item name="paddingEnd">@dimen/padding_double</item>
+    <item name="android:layout_marginStart">@dimen/padding_double</item>
   </style>
 
 </resources>
